--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    d list(map(lambda term : find_term_derivative(fuction_terms), function_terms))"
+    "    derivative list(map(lambda term : find_term_derivative(fuction_terms), function_terms))"
    ]
   },
   {
