--- a/index.ipynb
+++ b/index.ipynb
@@ -147,17 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    "
+    "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term),function_terms))\n",
+    "    return derivative_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +167,7 @@
        "[(12, 2), (-3, 0)]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
