--- a/index.ipynb
+++ b/index.ipynb
@@ -147,13 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term),function_terms))\n",
-    "    return derivative_terms"
+    "    return list(filter(lambda derivative_term: derivative_term[0] != 0, derivative_terms))"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "[(6, 1)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
