--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,8 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    derivative_fn = find_derivative(terms)\n",
-    "    total = 0"
+    "    total = 0\n",
+    "    for term"
    ]
   },
   {
