--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
     "def derivative_at(terms, x):\n",
     "    derivative_fn = find_derivative(terms)\n",
     "    total = 0\n",
-    "    for term"
+    "    for term in derivative_fn"
    ]
   },
   {
