--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -256,14 +256,26 @@
     "    derivative_fn = find_derivative(terms)\n",
     "    total = 0\n",
     "    for term in derivative_fn:\n",
-    "        total += term[0]*x**term[1]"
+    "        total += term[0]*x**term[1]\n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
     "derivative_at(three_x_squared_minus_eleven, 2) # 12"
